<resources>
    <string name="app_name">JetRubyTest</string>
    <string name="action_settings">Settings</string>

    <string name="general_settings">General settings</string>

    <string name="resource_settings">Resource settings</string>

    <string name="directory_chooser">Choose picture to start with</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_switch">Remote view</string>

    <string name="slide_duration">Duration (from 1 to 60 seconds)</string>

    <string name="empty_directory">Not specified</string>

    <string name="invalid_duration">Please specify value from 1 to 60</string>

    <string name="effects_title">Sliding effect</string>

    <string name="pref_duration_key">location</string>

    <string name="enter_resources">Enter links</string>

    <string name="enter_resources_summary">Tap to enter remote image link</string>

    <string name="pref_switch_key">switch</string>

    <string name="pref_directory_chooser_key">directory_chooser</string>

    <string name="empty_resource_message">There is nothing to show. Please specify resource.</string>

    <string name="pref_effects_key">effects</string>

    <string name="failed_download">An error occurred, check image URL</string>

    <string name="disable_permission">You wouldn\'t be able watching slides. Please enable permission.</string>

    <string name="enable_permission">Permissions granted</string>

    <string name="disable_permission_menu">You can\'t watch slides, please enable permission.</string>

    <string name="empty_result">There is nothing to show</string>

    <string name="error_result">Couldn\'t retrieve image</string>

    <string name="default_duration">10</string>

    <string name="default_effect">10</string>



    <string name="pref_link_1">Link 1</string>
    <string name="pref_link_2">Link 2</string>
    <string name="pref_link_3">Link 3</string>
    <string name="pref_link_4">Link 4</string>
    <string name="pref_link_5">Link 5</string>

    <string name="pref_link_key_1">link 1</string>
    <string name="pref_link_key_2">link 2</string>
    <string name="pref_link_key_3">link 3</string>
    <string name="pref_link_key_4">link 4</string>
    <string name="pref_link_key_5">link 5</string>

    <string-array name="listentries">
        <item>None</item>
        <item>From left to right</item>
        <item>From right to left</item>
        <item>Fade in/fade out</item>
    </string-array>
    <string-array name="listvalues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
